syntax = "proto3";
package com.cainsgl.grpc;
option java_package = "com.cainsgl.grpc.user";
option java_outer_classname = "UserServiceProto";
option java_multiple_files = true;

message ProcessLogRequest {
    int32 value = 1;
}

message ProcessLogResponse {
    int32 result = 1;
}

// UserLog Service
service UserLogService {
    rpc processLog (ProcessLogRequest) returns (ProcessLogResponse);
}
// UserExtraInfo Service
message GetInterestVectorRequest {
    int64 user_id = 1;
}

message GetInterestVectorResponse {
    repeated float interest_vector = 1;
}

service UserExtraInfoService {
    rpc getInterestVector (GetInterestVectorRequest) returns (GetInterestVectorResponse);
}
